[project]
name = "luma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "ollama>=0.5.4",
    "srsly>=2.5.1",
]
